# datasette-plugin-template-demo

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
tests/: test_plugin_template_demo.py
