[project]
name = "datasette-plugin-template-demo"
version = "0.1"
description = "Demonstrating https://github.com/simonw/datasette-plugin"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/datasette-plugin-template-demo"
Changelog = "https://github.com/simonw/datasette-plugin-template-demo/releases"
Issues = "https://github.com/simonw/datasette-plugin-template-demo/issues"
CI = "https://github.com/simonw/datasette-plugin-template-demo/actions"

[project.entry-points.datasette]
plugin_template_demo = "datasette_plugin_template_demo"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
datasette_plugin_template_demo = ["static/*", "templates/*"]

